tests/neg-custom-args/captures/lazylists1.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists1.scala:25:63 -----------------------------------
25 |      def concat(other: {f} LazyList[A]): {this} LazyList[A] = ??? : ({xs, f} LazyList[A]) // error
   |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                                               Found:    {xs, f} LazyList[A]
   |                                                               Required: {Mapped.this, xs} LazyList[A]

longer explanation available when compiling with `-explain`
